compiler-native/compiler/y.output
Terminals unused in grammar

   FIELD
   TYPE


Grammar

    0 $accept: prog $end

    1 prog: decl_list

    2 decl_list: %empty
    3          | decl_list func
    4          | decl_list sfunc
    5          | decl_list var_def ';'

    6 block_decl_list: func
    7                | sfunc
    8                | var_def ';'
    9                | block_decl_list func
   10                | block_decl_list sfunc
   11                | block_decl_list var_def ';'

   12 block: expr ';'
   13      | '{' expr '}'
   14      | '{' block_decl_list expr '}'

   15 expr_list: expr
   16          | expr_list ',' expr

   17 expr: NUM
   18     | BOOL
   19     | ID
   20     | ID '(' ')'
   21     | ID '(' expr_list ')'
   22     | expr '.' ID
   23     | '(' expr ')'
   24     | expr '+' expr
   25     | expr '-' expr
   26     | expr '*' expr
   27     | expr '/' expr
   28     | expr '>' expr
   29     | expr '<' expr
   30     | expr PIPE expr
   31     | expr AND expr
   32     | expr OR expr
   33     | expr EQUAL expr
   34     | expr NOTEQUAL expr
   35     | '-' expr
   36     | '!' expr
   37     | IF '(' expr ')' block ELSE block
   38     | IF '(' expr ')' block
   39     | expr '?' expr
   40     | expr '?' expr ':' expr
   41     | '/' re '/'
   42     | agg_expr
   43     | ID '{' SPLIT '(' expr ',' expr ')' '}'
   44     | ID '{' ITER '(' expr ')' '}'

   45 agg_expr: ID '{' expr '|' ID ID '}'
   46         | ID '{' expr '}'

   47 re: '[' expr_list ']'
   48   | '.'
   49   | re re
   50   | re '*'
   51   | re '|' re
   52   | '(' re ')'

   53 sfunc: SFUNKEY ID ID '(' arglist ')' '=' block
   54      | SFUNKEY ID ID '(' ')' '=' block
   55      | SFUNKEY ID ID '=' block

   56 func: FUNKEY ID ID '(' arglist ')' '=' block
   57     | FUNKEY ID ID '(' ')' '=' block
   58     | FUNKEY ID ID '=' block

   59 var_def: ID ID '=' expr

   60 arg: ID ID

   61 arglist: arg
   62        | arglist ',' arg


Terminals, with rules where they appear

$end (0) 0
'!' (33) 36
'(' (40) 20 21 23 37 38 43 44 52 53 54 56 57
')' (41) 20 21 23 37 38 43 44 52 53 54 56 57
'*' (42) 26 50
'+' (43) 24
',' (44) 16 43 62
'-' (45) 25 35
'.' (46) 22 48
'/' (47) 27 41
':' (58) 40
';' (59) 5 8 11 12
'<' (60) 29
'=' (61) 53 54 55 56 57 58 59
'>' (62) 28
'?' (63) 39 40
'[' (91) 47
']' (93) 47
'{' (123) 13 14 43 44 45 46
'|' (124) 45 51
'}' (125) 13 14 43 44 45 46
error (256)
NUM (258) 17
ID (259) 19 20 21 22 43 44 45 46 53 54 55 56 57 58 59 60
BOOL (260) 18
FIELD (261)
SPLIT (262) 43
ITER (263) 44
IF (264) 37 38
ELSE (265) 37
FUNKEY (266) 56 57 58
SFUNKEY (267) 53 54 55
TYPE (268)
OR (269) 32
AND (270) 31
EQUAL (271) 33
NOTEQUAL (272) 34
PIPE (273) 30
NEG (274)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
prog (41)
    on left: 1, on right: 0
decl_list (42)
    on left: 2 3 4 5, on right: 1 3 4 5
block_decl_list (43)
    on left: 6 7 8 9 10 11, on right: 9 10 11 14
block (44)
    on left: 12 13 14, on right: 37 38 53 54 55 56 57 58
expr_list (45)
    on left: 15 16, on right: 16 21 47
expr (46)
    on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 40 41 42 43 44, on right: 12 13 14 15 16 22 23 24
    25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 43 44 45 46 59
agg_expr (47)
    on left: 45 46, on right: 42
re (48)
    on left: 47 48 49 50 51 52, on right: 41 49 50 51 52
sfunc (49)
    on left: 53 54 55, on right: 4 7 10
func (50)
    on left: 56 57 58, on right: 3 6 9
var_def (51)
    on left: 59, on right: 5 8 11
arg (52)
    on left: 60, on right: 61 62
arglist (53)
    on left: 61 62, on right: 53 56 62


State 0

    0 $accept: . prog $end

    $default  reduce using rule 2 (decl_list)

    prog       go to state 1
    decl_list  go to state 2


State 1

    0 $accept: prog . $end

    $end  shift, and go to state 3


State 2

    1 prog: decl_list .
    3 decl_list: decl_list . func
    4          | decl_list . sfunc
    5          | decl_list . var_def ';'

    ID       shift, and go to state 4
    FUNKEY   shift, and go to state 5
    SFUNKEY  shift, and go to state 6

    $default  reduce using rule 1 (prog)

    sfunc    go to state 7
    func     go to state 8
    var_def  go to state 9


State 3

    0 $accept: prog $end .

    $default  accept


State 4

   59 var_def: ID . ID '=' expr

    ID  shift, and go to state 10


State 5

   56 func: FUNKEY . ID ID '(' arglist ')' '=' block
   57     | FUNKEY . ID ID '(' ')' '=' block
   58     | FUNKEY . ID ID '=' block

    ID  shift, and go to state 11


State 6

   53 sfunc: SFUNKEY . ID ID '(' arglist ')' '=' block
   54      | SFUNKEY . ID ID '(' ')' '=' block
   55      | SFUNKEY . ID ID '=' block

    ID  shift, and go to state 12


State 7

    4 decl_list: decl_list sfunc .

    $default  reduce using rule 4 (decl_list)


State 8

    3 decl_list: decl_list func .

    $default  reduce using rule 3 (decl_list)


State 9

    5 decl_list: decl_list var_def . ';'

    ';'  shift, and go to state 13


State 10

   59 var_def: ID ID . '=' expr

    '='  shift, and go to state 14


State 11

   56 func: FUNKEY ID . ID '(' arglist ')' '=' block
   57     | FUNKEY ID . ID '(' ')' '=' block
   58     | FUNKEY ID . ID '=' block

    ID  shift, and go to state 15


State 12

   53 sfunc: SFUNKEY ID . ID '(' arglist ')' '=' block
   54      | SFUNKEY ID . ID '(' ')' '=' block
   55      | SFUNKEY ID . ID '=' block

    ID  shift, and go to state 16


State 13

    5 decl_list: decl_list var_def ';' .

    $default  reduce using rule 5 (decl_list)


State 14

   59 var_def: ID ID '=' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 25
    agg_expr  go to state 26


State 15

   56 func: FUNKEY ID ID . '(' arglist ')' '=' block
   57     | FUNKEY ID ID . '(' ')' '=' block
   58     | FUNKEY ID ID . '=' block

    '('  shift, and go to state 27
    '='  shift, and go to state 28


State 16

   53 sfunc: SFUNKEY ID ID . '(' arglist ')' '=' block
   54      | SFUNKEY ID ID . '(' ')' '=' block
   55      | SFUNKEY ID ID . '=' block

    '('  shift, and go to state 29
    '='  shift, and go to state 30


State 17

   17 expr: NUM .

    $default  reduce using rule 17 (expr)


State 18

   19 expr: ID .
   20     | ID . '(' ')'
   21     | ID . '(' expr_list ')'
   43     | ID . '{' SPLIT '(' expr ',' expr ')' '}'
   44     | ID . '{' ITER '(' expr ')' '}'
   45 agg_expr: ID . '{' expr '|' ID ID '}'
   46         | ID . '{' expr '}'

    '('  shift, and go to state 31
    '{'  shift, and go to state 32

    $default  reduce using rule 19 (expr)


State 19

   18 expr: BOOL .

    $default  reduce using rule 18 (expr)


State 20

   37 expr: IF . '(' expr ')' block ELSE block
   38     | IF . '(' expr ')' block

    '('  shift, and go to state 33


State 21

   36 expr: '!' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 34
    agg_expr  go to state 26


State 22

   35 expr: '-' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 35
    agg_expr  go to state 26


State 23

   41 expr: '/' . re '/'

    '.'  shift, and go to state 36
    '('  shift, and go to state 37
    '['  shift, and go to state 38

    re  go to state 39


State 24

   23 expr: '(' . expr ')'

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 40
    agg_expr  go to state 26


State 25

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr
   59 var_def: ID ID '=' expr .

    '?'       shift, and go to state 41
    OR        shift, and go to state 42
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 59 (var_def)


State 26

   42 expr: agg_expr .

    $default  reduce using rule 42 (expr)


State 27

   56 func: FUNKEY ID ID '(' . arglist ')' '=' block
   57     | FUNKEY ID ID '(' . ')' '=' block

    ID   shift, and go to state 54
    ')'  shift, and go to state 55

    arg      go to state 56
    arglist  go to state 57


State 28

   58 func: FUNKEY ID ID '=' . block

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24
    '{'   shift, and go to state 58

    block     go to state 59
    expr      go to state 60
    agg_expr  go to state 26


State 29

   53 sfunc: SFUNKEY ID ID '(' . arglist ')' '=' block
   54      | SFUNKEY ID ID '(' . ')' '=' block

    ID   shift, and go to state 54
    ')'  shift, and go to state 61

    arg      go to state 56
    arglist  go to state 62


State 30

   55 sfunc: SFUNKEY ID ID '=' . block

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24
    '{'   shift, and go to state 58

    block     go to state 63
    expr      go to state 60
    agg_expr  go to state 26


State 31

   20 expr: ID '(' . ')'
   21     | ID '(' . expr_list ')'

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24
    ')'   shift, and go to state 64

    expr_list  go to state 65
    expr       go to state 66
    agg_expr   go to state 26


State 32

   43 expr: ID '{' . SPLIT '(' expr ',' expr ')' '}'
   44     | ID '{' . ITER '(' expr ')' '}'
   45 agg_expr: ID '{' . expr '|' ID ID '}'
   46         | ID '{' . expr '}'

    NUM    shift, and go to state 17
    ID     shift, and go to state 18
    BOOL   shift, and go to state 19
    SPLIT  shift, and go to state 67
    ITER   shift, and go to state 68
    IF     shift, and go to state 20
    '!'    shift, and go to state 21
    '-'    shift, and go to state 22
    '/'    shift, and go to state 23
    '('    shift, and go to state 24

    expr      go to state 69
    agg_expr  go to state 26


State 33

   37 expr: IF '(' . expr ')' block ELSE block
   38     | IF '(' . expr ')' block

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 70
    agg_expr  go to state 26


State 34

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   36     | '!' expr .
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 36 (expr)


State 35

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   35     | '-' expr .
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '.'  shift, and go to state 53

    $default  reduce using rule 35 (expr)


State 36

   48 re: '.' .

    $default  reduce using rule 48 (re)


State 37

   52 re: '(' . re ')'

    '.'  shift, and go to state 36
    '('  shift, and go to state 37
    '['  shift, and go to state 38

    re  go to state 71


State 38

   47 re: '[' . expr_list ']'

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr_list  go to state 72
    expr       go to state 66
    agg_expr   go to state 26


State 39

   41 expr: '/' re . '/'
   49 re: re . re
   50   | re . '*'
   51   | re . '|' re

    '|'  shift, and go to state 73
    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '.'  shift, and go to state 36
    '('  shift, and go to state 37
    '['  shift, and go to state 38

    re  go to state 76


State 40

   22 expr: expr . '.' ID
   23     | '(' expr . ')'
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '?'       shift, and go to state 41
    OR        shift, and go to state 42
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53
    ')'       shift, and go to state 77


State 41

   39 expr: expr '?' . expr
   40     | expr '?' . expr ':' expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 78
    agg_expr  go to state 26


State 42

   32 expr: expr OR . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 79
    agg_expr  go to state 26


State 43

   31 expr: expr AND . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 80
    agg_expr  go to state 26


State 44

   28 expr: expr '>' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 81
    agg_expr  go to state 26


State 45

   29 expr: expr '<' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 82
    agg_expr  go to state 26


State 46

   33 expr: expr EQUAL . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 83
    agg_expr  go to state 26


State 47

   34 expr: expr NOTEQUAL . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 84
    agg_expr  go to state 26


State 48

   24 expr: expr '+' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 85
    agg_expr  go to state 26


State 49

   25 expr: expr '-' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 86
    agg_expr  go to state 26


State 50

   30 expr: expr PIPE . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 87
    agg_expr  go to state 26


State 51

   26 expr: expr '*' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 88
    agg_expr  go to state 26


State 52

   27 expr: expr '/' . expr

    NUM   shift, and go to state 17
    ID    shift, and go to state 18
    BOOL  shift, and go to state 19
    IF    shift, and go to state 20
    '!'   shift, and go to state 21
    '-'   shift, and go to state 22
    '/'   shift, and go to state 23
    '('   shift, and go to state 24

    expr      go to state 89
    agg_expr  go to state 26


State 53

   22 expr: expr '.' . ID

    ID  shift, and go to state 90


State 54

   60 arg: ID . ID

    ID  shift, and go to state 91


State 55

   57 func: FUNKEY ID ID '(' ')' . '=' block

    '='  shift, and go to state 92


State 56

   61 arglist: arg .

    $default  reduce using rule 61 (arglist)


State 57

   56 func: FUNKEY ID ID '(' arglist . ')' '=' block
   62 arglist: arglist . ',' arg

    ')'  shift, and go to state 93
    ','  shift, and go to state 94


State 58

   13 block: '{' . expr '}'
   14      | '{' . block_decl_list expr '}'

    NUM      shift, and go to state 17
    ID       shift, and go to state 95
    BOOL     shift, and go to state 19
    IF       shift, and go to state 20
    FUNKEY   shift, and go to state 5
    SFUNKEY  shift, and go to state 6
    '!'      shift, and go to state 21
    '-'      shift, and go to state 22
    '/'      shift, and go to state 23
    '('      shift, and go to state 24

    block_decl_list  go to state 96
    expr             go to state 97
    agg_expr         go to state 26
    sfunc            go to state 98
    func             go to state 99
    var_def          go to state 100


State 59

   58 func: FUNKEY ID ID '=' block .

    $default  reduce using rule 58 (func)


State 60

   12 block: expr . ';'
   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '?'       shift, and go to state 41
    OR        shift, and go to state 42
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53
    ';'       shift, and go to state 101


State 61

   54 sfunc: SFUNKEY ID ID '(' ')' . '=' block

    '='  shift, and go to state 102


State 62

   53 sfunc: SFUNKEY ID ID '(' arglist . ')' '=' block
   62 arglist: arglist . ',' arg

    ')'  shift, and go to state 103
    ','  shift, and go to state 94


State 63

   55 sfunc: SFUNKEY ID ID '=' block .

    $default  reduce using rule 55 (sfunc)


State 64

   20 expr: ID '(' ')' .

    $default  reduce using rule 20 (expr)


State 65

   16 expr_list: expr_list . ',' expr
   21 expr: ID '(' expr_list . ')'

    ')'  shift, and go to state 104
    ','  shift, and go to state 105


State 66

   15 expr_list: expr .
   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '?'       shift, and go to state 41
    OR        shift, and go to state 42
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 15 (expr_list)


State 67

   43 expr: ID '{' SPLIT . '(' expr ',' expr ')' '}'

    '('  shift, and go to state 106


State 68

   44 expr: ID '{' ITER . '(' expr ')' '}'

    '('  shift, and go to state 107


State 69

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr
   45 agg_expr: ID '{' expr . '|' ID ID '}'
   46         | ID '{' expr . '}'

    '?'       shift, and go to state 41
    OR        shift, and go to state 42
    '|'       shift, and go to state 108
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53
    '}'       shift, and go to state 109


State 70

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   37     | IF '(' expr . ')' block ELSE block
   38     | IF '(' expr . ')' block
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '?'       shift, and go to state 41
    OR        shift, and go to state 42
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53
    ')'       shift, and go to state 110


State 71

   49 re: re . re
   50   | re . '*'
   51   | re . '|' re
   52   | '(' re . ')'

    '|'  shift, and go to state 73
    '*'  shift, and go to state 74
    '.'  shift, and go to state 36
    '('  shift, and go to state 37
    ')'  shift, and go to state 111
    '['  shift, and go to state 38

    re  go to state 76


State 72

   16 expr_list: expr_list . ',' expr
   47 re: '[' expr_list . ']'

    ']'  shift, and go to state 112
    ','  shift, and go to state 105


State 73

   51 re: re '|' . re

    '.'  shift, and go to state 36
    '('  shift, and go to state 37
    '['  shift, and go to state 38

    re  go to state 113


State 74

   50 re: re '*' .

    $default  reduce using rule 50 (re)


State 75

   41 expr: '/' re '/' .

    $default  reduce using rule 41 (expr)


State 76

   49 re: re . re
   49   | re re .
   50   | re . '*'
   51   | re . '|' re

    '*'  shift, and go to state 74
    '.'  shift, and go to state 36
    '('  shift, and go to state 37
    '['  shift, and go to state 38

    $default  reduce using rule 49 (re)

    re  go to state 76


State 77

   23 expr: '(' expr ')' .

    $default  reduce using rule 23 (expr)


State 78

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   39     | expr '?' expr .
   40     | expr . '?' expr ':' expr
   40     | expr '?' expr . ':' expr

    ':'       shift, and go to state 114
    OR        shift, and go to state 42
    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    '?'  error (nonassociative)

    $default  reduce using rule 39 (expr)


State 79

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   32     | expr OR expr .
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    AND       shift, and go to state 43
    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 32 (expr)


State 80

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   31     | expr AND expr .
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    '>'       shift, and go to state 44
    '<'       shift, and go to state 45
    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 31 (expr)


State 81

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   28     | expr '>' expr .
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 28 (expr)


State 82

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   29     | expr '<' expr .
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr

    EQUAL     shift, and go to state 46
    NOTEQUAL  shift, and go to state 47
    '+'       shift, and go to state 48
    '-'       shift, and go to state 49
    PIPE      shift, and go to state 50
    '*'       shift, and go to state 51
    '/'       shift, and go to state 52
    '.'       shift, and go to state 53

    $default  reduce using rule 29 (expr)


State 83

   22 expr: expr . '.' ID
   24     | expr . '+' expr
   25     | expr . '-' expr
   26     | expr . '*' expr
   27     | expr . '/' expr
   28     | expr . '>' expr
   29     | expr . '<' expr
   30     | expr . PIPE expr
   31     | expr . AND expr
   32     | expr . OR expr
   33     | expr . EQUAL expr
   33     | expr EQUAL expr .
   34     | expr . NOTEQUAL expr
   39     | expr . '?' expr
   40     | expr . '?' expr ':' expr
